// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`imng-ngrx-module actions should work 1`] = `
"import { createAction } from '@ngrx/store';
import { ODataResult, ODataState } from 'imng-kendo-odata';
import { createModalAction, createPayloadAction } from 'imng-ngrx-utils';
import { ICustomer, ISalesAgent } from '../../../models/webapi';

export const loadCustomersRequest = createPayloadAction<ODataState>(
    '[Customers] Load Customers Request');
export const loadCustomersSuccess = createPayloadAction<ODataResult<ICustomer>>(
    '[Customers] Load Customers Success');
export const reloadCustomersRequest = createAction(
    '[Customers] Reload Customers Request');
export const reloadCustomersSuccess = createPayloadAction<ODataResult<ICustomer>>(
    '[Customers] Reload Customers Success');

export const clearCurrentCustomer = createAction('[Customers] Clear Current Customer');
export const setCurrentCustomer = createModalAction<ICustomer>('[Customers] Set Current Customer');
export const saveCustomerRequest = createPayloadAction<ICustomer>('[Customers] Save Customer Request');
export const updateCustomerRequest = createPayloadAction<ICustomer>('[Customers] Update Customer Request');
export const deleteCustomerRequest = createPayloadAction<ICustomer>('[Customers] Delete Customer Request');

export const loadSalesAgentsRequest = createPayloadAction<ODataState>(
    '[Customers] Load SalesAgents Request');
export const loadSalesAgentsSuccess = createPayloadAction<ODataResult<ISalesAgent>>(
    '[Customers] Load SalesAgents Success');
"
`;

exports[`imng-ngrx-module crud effect should work 1`] = `
"import { Injectable, inject } from '@angular/core';
import { createEffect, Actions, ofType } from '@ngrx/effects';
import { ODataService } from 'imng-kendo-odata';
import { handleEffectError } from 'imng-ngrx-utils';
import { map, switchMap } from 'rxjs/operators';

import * as customerActionTypes from './customer.actions';
import { CustomerApiService } from '../customer.api.service';


@Injectable()
export class CustomerCrudEffects {
    private readonly actions$ = inject(Actions);
    private readonly odataService = inject(ODataService);
    private readonly customerApiService = inject(CustomerApiService);


  saveCustomerEffect$ = createEffect(() => {
    return this.actions$.pipe(
      ofType(customerActionTypes.saveCustomerRequest),
      switchMap((action: ReturnType<typeof customerActionTypes.saveCustomerRequest>) => this.customerApiService.post(action.payload).pipe(
        map(() => customerActionTypes.reloadCustomersRequest()),
        handleEffectError(action))));
  });

  updateCustomerEffect$ = createEffect(() => {
    return this.actions$.pipe(
      ofType(customerActionTypes.updateCustomerRequest),
      switchMap((action: ReturnType<typeof customerActionTypes.updateCustomerRequest>) => this.customerApiService.put(action.payload).pipe(
        map(() => customerActionTypes.reloadCustomersRequest()),
        handleEffectError(action))));
  });

  deleteCustomerEffect$ = createEffect(() => {
    return this.actions$.pipe(
      ofType(customerActionTypes.deleteCustomerRequest),
      switchMap((action: ReturnType<typeof customerActionTypes.deleteCustomerRequest>) => this.customerApiService.delete(action.payload).pipe(
        map(() => customerActionTypes.reloadCustomersRequest()),
        handleEffectError(action))));
  });
}
"
`;

exports[`imng-ngrx-module crud facade spec template should work 1`] = `
"///<reference types="jest" />
import { NgModule } from '@angular/core';
import { TestBed } from '@angular/core/testing';
import { HttpClient } from '@angular/common/http';
import { EffectsModule } from '@ngrx/effects';
import { StoreModule, Store } from '@ngrx/store';
import { readFirst } from 'imng-ngrx-utils/testing';
import {
  testDeleteCurrentEntity,
  testModalStateAddAndClearCurrentEntity,
  testModalStateEditAndClearCurrentEntity,
  testSaveCurrentEntity,
  testUpdateCurrentEntity,
} from 'imng-kendo-data-entry/testing';
import { createODataPayload } from 'imng-kendo-odata';
import { of } from 'rxjs';

import { customersFeature, CustomerListEffects, CustomerCrudEffects } from './+state';
import { CustomerCrudFacade } from './customer.crud.facade';
import { CustomerApiService } from './customer.api.service';
import { createTestCustomer } from '../../../models/webapi';
import { environment } from '@env';

describe('CustomerCrudFacade', () => {
  let facade: CustomerCrudFacade;
  let store: Store;
  let httpClient: HttpClient;

  describe('used in NgModule', () => {
    beforeEach(() => {
      @NgModule({
        imports: [
          StoreModule.forFeature(customersFeature),
          EffectsModule.forFeature([CustomerListEffects, CustomerCrudEffects]),
        ],
        providers: [
          CustomerCrudFacade,
          CustomerApiService,
          { provide: HttpClient, useValue: { get: jest.fn(() => of(createODataPayload([createTestCustomer()]))) } },
        ],
      })
      class CustomFeatureModule {}

      @NgModule({
        imports: [
          StoreModule.forRoot({}, { runtimeChecks: environment.runtimeChecks }),
          EffectsModule.forRoot([]),
          CustomFeatureModule,
        ],
      })
      class RootModule {}
      TestBed.configureTestingModule({ imports: [RootModule] });

      // eslint-disable-next-line @typescript-eslint/no-unused-vars
      store = TestBed.inject(Store);
      facade = TestBed.inject(CustomerCrudFacade);
      httpClient = TestBed.inject(HttpClient);
    });

    test('clearCurrentEntity() should set currentCustomer to null', async () => {
      let currentModalState = await readFirst(facade.currentModalState$);
      expect(currentModalState).toBeUndefined();

      facade.clearCurrentEntity();
      currentModalState = await readFirst(facade.currentModalState$);

      expect(currentModalState).toBeUndefined();
      expect(await readFirst(store)).toMatchSnapshot();
    });

    test('Add Modal State And Clear CurrentEntity', async () =>
      testModalStateAddAndClearCurrentEntity<CustomerCrudFacade>(facade));
    test('Edit Modal state And Clear CurrentEntity', async () =>
      testModalStateEditAndClearCurrentEntity<CustomerCrudFacade>(facade));
    test('Save CurrentEntity', async () =>
      testSaveCurrentEntity<CustomerCrudFacade>(facade, httpClient));
    test('Update CurrentEntity', async () =>
      testUpdateCurrentEntity<CustomerCrudFacade>(facade, httpClient));
    test('it should handle DeleteItem', async () => {
      await testDeleteCurrentEntity(facade, httpClient);
    });
  });
});
"
`;

exports[`imng-ngrx-module crud facade template should work 1`] = `
"import { Injectable, inject } from '@angular/core';
import { Store } from '@ngrx/store';
import { IDataDeleteFacade, IDataEntryFacade } from 'imng-kendo-data-entry';

import { customersFeature, customerActionTypes } from './+state';
import { ICustomer } from '../../../models/webapi';

@Injectable({providedIn: 'root'})
export class CustomerCrudFacade implements IDataEntryFacade<ICustomer>, IDataDeleteFacade<ICustomer> {
  private readonly store = inject(Store);

  loading$ = this.store.select(customersFeature.selectLoading);
  currentEntity$ = this.store.select(customersFeature.selectCurrentCustomer);
  currentModalState$ = this.store.select(customersFeature.selectCurrentCustomerModalState);

  public setCurrentEntity(item: ICustomer, modalState: string): void {
    this.store.dispatch(
      customerActionTypes.setCurrentCustomer({
        modalState,
        entity: item,
      }),
    );
  }

  public clearCurrentEntity(): void {
    this.store.dispatch(customerActionTypes.clearCurrentCustomer());
  }

  public saveNewEntity(item: ICustomer): void {
    this.store.dispatch(customerActionTypes.saveCustomerRequest(item));
  }

  public updateExistingEntity(item: ICustomer): void {
    this.store.dispatch(customerActionTypes.updateCustomerRequest(item));
  }

  public deleteExistingEntity(item: ICustomer): void {
    this.store.dispatch(customerActionTypes.deleteCustomerRequest(item));
  }
}
"
`;

exports[`imng-ngrx-module feature should work 1`] = `
"import { createReducer, on, createFeature } from '@ngrx/store';
import { createKendoODataGridInitialState, getODataPagerSettings, KendoODataGridState } from 'imng-kendo-grid-odata';
import { imngEffectError, imngEffectErrorReducer } from 'imng-ngrx-utils';

import * as customerActionTypes from './customer.actions';
import { ICustomer, ISalesAgent } from '../../../models/webapi';

export const CUSTOMERS_FEATURE_KEY = 'customers';

export interface State extends KendoODataGridState<ICustomer> {
  currentCustomer: ICustomer | undefined;
  currentCustomerModalState: string | undefined;
  salesAgents: ISalesAgent[];
}

export const initialState: State = {
  ...createKendoODataGridInitialState(),
  currentCustomer: undefined,
  currentCustomerModalState: undefined,
  salesAgents: [],
  loading: true,
};

export const customersFeature = createFeature({
  name: CUSTOMERS_FEATURE_KEY,
  reducer: createReducer(
    initialState,
    on(customerActionTypes.loadCustomersRequest,
      (state, { payload }) : State => ({
        ...state,
        gridODataState: payload,
        loading: true,
        error: null, })),
    on(customerActionTypes.loadCustomersSuccess,
      customerActionTypes.reloadCustomersSuccess,
      (state, { payload }) : State => ({
        ...state,
        loading: false,
        gridPagerSettings: getODataPagerSettings({
          gridData: payload,
          gridODataState: state.gridODataState,
        }),
        gridData: payload,
        error: null, })),
    on(customerActionTypes.setCurrentCustomer,
      (state, { payload }) : State =>
        ({ ...state,
        currentCustomerModalState: payload.modalState,
        currentCustomer: payload.entity })),
    on(customerActionTypes.clearCurrentCustomer,
      (state) : State => ({
        ...state, 
        currentCustomer: undefined,
        currentCustomerModalState: undefined,
      })),
    on(customerActionTypes.saveCustomerRequest,
      customerActionTypes.updateCustomerRequest,
      customerActionTypes.deleteCustomerRequest,
      (state) : State => ({
        ...state,
        loading: true,
      })),
    on(customerActionTypes.loadSalesAgentsSuccess,
      (state, { payload }): State => ({
        ...state,
        salesAgents: payload.data
      })),
    on(imngEffectError, imngEffectErrorReducer),
  )
});
"
`;

exports[`imng-ngrx-module list effect should work 1`] = `
"import { Injectable, inject } from '@angular/core';
import { Store } from '@ngrx/store';
import { createEffect, Actions, ofType } from '@ngrx/effects';
import { concatLatestFrom } from '@ngrx/operators';
import { ODataService } from 'imng-kendo-odata';
import { handleEffectError } from 'imng-ngrx-utils';
import { map, switchMap } from 'rxjs/operators';

import { customersFeature } from './customer.feature';
import * as customerActionTypes from './customer.actions';
import { ICustomer, CustomerProperties } from '../../../models/webapi';
import { environment } from '@env';

@Injectable()
export class CustomerListEffects {
    private readonly actions$ = inject(Actions);
    private readonly odataService = inject(ODataService);
    private readonly store = inject(Store);


  loadCustomersEffect$ = createEffect(() => {
    return this.actions$.pipe(
      ofType(customerActionTypes.loadCustomersRequest),
      switchMap((action: ReturnType<typeof customerActionTypes.loadCustomersRequest>) => this.odataService
        .fetch<ICustomer>(environment.odataEndpoints.customers, action.payload, {
          dateNullableProps: [CustomerProperties.UPDATED_ON_UTC],
        })
        .pipe(
          map(t => customerActionTypes.loadCustomersSuccess(t)),
          handleEffectError(action))));
  });

  reloadCustomersEffect$ = createEffect(() => {
    return this.actions$.pipe(
      ofType(customerActionTypes.reloadCustomersRequest),
      concatLatestFrom(() => this.store.select(customersFeature.selectGridODataState)),
      switchMap(([action, odataState]) => this.odataService
        .fetch<ICustomer>(environment.odataEndpoints.customers, odataState, {
          bustCache: true,
          dateNullableProps: [CustomerProperties.UPDATED_ON_UTC],
        })
        .pipe(
          map(t => customerActionTypes.reloadCustomersSuccess(t)),
          handleEffectError(action))));
  });
}
"
`;

exports[`imng-ngrx-module list facade template should work 1`] = `
"import { Injectable, inject } from '@angular/core';
import { Store } from '@ngrx/store';
import { IKendoODataGridFacade } from 'imng-kendo-grid-odata';
import { ODataState } from 'imng-kendo-odata';

import { customersFeature, customerActionTypes } from './+state';
import { ICustomer } from '../../../models/webapi';

@Injectable({providedIn: 'root'})
export class CustomerListFacade implements IKendoODataGridFacade<ICustomer> {
  private readonly store = inject(Store);

  loading$ = this.store.select(customersFeature.selectLoading);
  gridData$ = this.store.select(customersFeature.selectGridData);
  gridPagerSettings$ = this.store.select(customersFeature.selectGridPagerSettings);
  gridODataState$ = this.store.select(customersFeature.selectGridODataState);

  public loadEntities(state: ODataState): void {
    this.store.dispatch(customerActionTypes.loadCustomersRequest(state));
  }

  public reloadEntities(): void {
    this.store.dispatch(customerActionTypes.reloadCustomersRequest());
  }
}
"
`;

exports[`imng-ngrx-module lookup effect should work 1`] = `
"import { Injectable, inject } from '@angular/core';
import { createEffect, Actions, ofType } from '@ngrx/effects';
import { ODataService } from 'imng-kendo-odata';
import { handleEffectError } from 'imng-ngrx-utils';
import { map, switchMap } from 'rxjs/operators';

import * as customerActionTypes from './customer.actions';
import { ISalesAgent } from '../../../models/webapi';
import { environment } from '@env';

@Injectable()
export class CustomerLookupEffects {
    private readonly actions$ = inject(Actions);
    private readonly odataService = inject(ODataService);


  loadSalesAgentsEffect$ = createEffect(() => {
    return this.actions$.pipe(
      ofType(customerActionTypes.loadSalesAgentsRequest),
      switchMap((action: ReturnType<typeof customerActionTypes.loadSalesAgentsRequest>) => this.odataService
        .fetch<ISalesAgent>(environment.odataEndpoints.salesAgents, action.payload)
        .pipe(map(t => customerActionTypes.loadSalesAgentsSuccess(t)),
          handleEffectError(action))));
  });
}
"
`;

exports[`imng-ngrx-module lookup facade spec template should work 1`] = `
"///<reference types="jest" />
import { NgModule } from '@angular/core';
import { TestBed } from '@angular/core/testing';
import { HttpClient } from '@angular/common/http';
import { EffectsModule } from '@ngrx/effects';
import { StoreModule } from '@ngrx/store';
import { readFirst } from 'imng-ngrx-utils/testing';
import { createODataPayload } from 'imng-kendo-odata';
import { of } from 'rxjs';

import { customersFeature, CustomerListEffects, CustomerLookupEffects, CustomerCrudEffects } from './+state';
import { CustomerLookupFacade } from './customer.lookup.facade';
import { createTestCustomer } from '../../../models/webapi';
import { environment } from '@env';

describe('CustomerLookupFacade', () => {
  let facade: CustomerLookupFacade;
  let httpClient: HttpClient;

  describe('used in NgModule', () => {
    beforeEach(() => {
      @NgModule({
        imports: [
          StoreModule.forFeature(customersFeature),
          EffectsModule.forFeature([CustomerListEffects,
          CustomerLookupEffects,
          CustomerCrudEffects,
          ]),
        ],
        providers: [
          CustomerLookupFacade,
          { provide: HttpClient, useValue: { get: jest.fn(() => of(createODataPayload([createTestCustomer()]))) } },
        ],
      })
      class CustomFeatureModule {}

      @NgModule({
        imports: [
          StoreModule.forRoot({}, { runtimeChecks: environment.runtimeChecks }),
          EffectsModule.forRoot([]),
          CustomFeatureModule,
        ],
      })
      class RootModule {}
      TestBed.configureTestingModule({ imports: [RootModule] });

      facade = TestBed.inject(CustomerLookupFacade);
      httpClient = TestBed.inject(HttpClient);
    });

    
    test('should load SalesAgents', async () => {
      facade.loadSalesAgents({});
      expect(httpClient.get).toHaveBeenCalledTimes(1);
      const result = await readFirst(facade.salesAgents$);
      expect(result).toHaveLength(1);
    });
  });
});
"
`;

exports[`imng-ngrx-module lookup facade template should work 1`] = `
"import { Injectable, inject } from '@angular/core';
import { Store } from '@ngrx/store';
import { ODataState } from 'imng-kendo-odata';

import { customersFeature, customerActionTypes } from './+state';

@Injectable({providedIn: 'root'})
export class CustomerLookupFacade {
  private readonly store = inject(Store);

  salesAgents$ = this.store.select(customersFeature.selectSalesAgents);


  public loadSalesAgents(state: ODataState): void {
    this.store.dispatch(customerActionTypes.loadSalesAgentsRequest(state));
  }
}
"
`;

exports[`imng-ngrx-module module should work 1`] = `
"import { NgModule } from '@angular/core';
import { StoreModule } from '@ngrx/store';
import { EffectsModule } from '@ngrx/effects';
import { ODataService } from 'imng-kendo-odata';

import { customersFeature, CustomerListEffects, CustomerLookupEffects, CustomerCrudEffects } from './+state';

import { CustomerApiService } from './customer.api.service';


@NgModule({
  imports: [
    StoreModule.forFeature(customersFeature),
    EffectsModule.forFeature([CustomerCrudEffects, CustomerListEffects, CustomerLookupEffects, ]),
  ],
  providers: [
    ODataService,
    CustomerApiService
  ],
})
export class CustomersModule { }
"
`;

exports[`imng-ngrx-module tree files should match 1`] = `
[
  "/test/customers-ngrx-module/+state/customer.actions.ts",
  "/test/customers-ngrx-module/+state/customer.crud.effects.ts",
  "/test/customers-ngrx-module/+state/customer.feature.ts",
  "/test/customers-ngrx-module/+state/customer.list.effects.ts",
  "/test/customers-ngrx-module/+state/customer.lookup.effects.ts",
  "/test/customers-ngrx-module/+state/index.ts",
  "/test/customers-ngrx-module/customer.api.service.ts",
  "/test/customers-ngrx-module/customer.crud.facade.spec.ts",
  "/test/customers-ngrx-module/customer.crud.facade.ts",
  "/test/customers-ngrx-module/customer.list.facade.spec.ts",
  "/test/customers-ngrx-module/customer.list.facade.ts",
  "/test/customers-ngrx-module/customer.lookup.facade.spec.ts",
  "/test/customers-ngrx-module/customer.lookup.facade.ts",
  "/test/customers-ngrx-module/customers.module.spec.ts",
  "/test/customers-ngrx-module/customers.module.ts",
  "/test/customers-ngrx-module/index.ts",
]
`;
